docs/benchmark/v2/report-analysis/prompt-template.md
# GitNexus Benchmark v2 多评分结果分析

你是一名谨慎的 benchmark 分析员。请基于下方唯一允许使用的分析输入，对多个 Graph/Grep 评分结果进行汇总、配对比较和可信度审查。

## 分析原则

1. 正式比较默认使用 `effective_total`；旧数据没有该字段时才使用 `total`。`automatic_total` 只用于解释人工审核影响。
2. 优先在相同 `project + case_id + agent + model + repeat` 内比较 Graph 与 Grep。无法配对的数据不得用于因果式结论。
3. 同时检查总分、评分维度、逐项 `item_scores`、噪音、工具成本、无效 run、人工审核状态和样本量。
4. Graph 领先不自动意味着图谱能力导致领先；Grep 领先也不自动意味着图谱无效。把“观测事实”“有证据支持的解释”“尚待验证的假设”明确区分。
5. 不得凭项目名称、代码量或技术栈臆测原因。原因分析必须引用输入中的 `run_id`、`item_id` 或明确的聚合字段路径。
6. 若评分器口径、Ground Truth、格式匹配、缺失数据或异常值可能放大差距，必须放在 `scoring_quality` 中，而不是静默补分。
7. `telecom-large` 若出现在输入中，视为无效实验，只能在限制项中说明，不纳入结论。
8. 所有数值必须来自输入；`case_comparisons.uplift = graph_avg - grep_avg`。不要把百分比与分数差混写。
9. 使用中文，语气简洁、审慎、可审计。不要输出 Markdown，不要输出 JSON 之外的文字。

## 输出要求

严格输出符合 `report-analysis.schema.json` 的单个 JSON 对象：

- `schema_version` 固定为 `"1.0"`；
- `source_digest` 必须原样复制为 `{{SOURCE_DIGEST}}`；
- `executive_summary` 用 1–4 段概括最重要结论；
- `key_findings` 只保留有明确证据的领先、落后或混合发现；
- `case_comparisons` 给出关键配对范围的 Graph/Grep 均分和分差；
- `scoring_quality` 记录评分可信度与数据质量问题；
- `cost_quality_tradeoffs` 分析质量与调用数、文件读取数、耗时等成本；
- `recommendations` 给出下一轮评测或人工审核建议，不修改本轮分数；
- `limitations` 明确样本量、缺失字段、旧版评分结构等限制。

## 分析输入

```json
{{ANALYSIS_INPUT_JSON}}
```
